# DNR-

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  dnr.service  dns_server.cpp  install.sh  setup.sh  test_domains.sh
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
src/: DNR  DNR.cpp  Makefile  Makefile.am  Makefile.in
src/.deps/: DNR.Po
