#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([DNR], [0.1], [bug-report@example.com])
AM_INIT_AUTOMAKE([-Wall foreign])
AC_CONFIG_SRCDIR([src/DNR.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.
AC_CHECK_LIB([resolv], [ns_name_uncompress])
AC_CHECK_LIB([rt], [clock_gettime])
AC_CHECK_LIB([ldns], [ldns_wire2pkt], [], [AC_MSG_ERROR([ldns library not found])])

# Checks for header files.
AC_HEADER_RESOLV
AC_CHECK_HEADERS([arpa/inet.h fcntl.h memory.h sys/socket.h syslog.h unistd.h ldns/ldns.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T

# Checks for library functions.
AC_CHECK_FUNCS([clock_gettime inet_ntoa memset select socket strchr])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
